tests/fsharp/typecheck/sigs/neg122.bsl

neg122.fs(19,28,19,38): typecheck error FS0001: The type 'string' does not support the operator 'ParseApply'
